--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 numpy<2
-transformers
+transformers>=4.4.1
 datasets
 sacrebleu 
 rouge_score 
@@ -19,3 +19,9 @@ fastapi
 uvicorn
 Jinja2
 evaluate
+protobuf>=3.20.5,<5 
+sentencepiece>=0.1.99
+tokenizer>=0.15
+tiktoken>=0.7.0
+safetensors>=0.4.2
+accelerate>=0.26.0
